# finance-competition

./: pyproject.toml
data/: submit.csv
notebook/: finance_competition.ipynb  tutorial.ipynb
